--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -19,3 +19,7 @@
   );
   min-height: 70vh;
 }
+
+.phone-img {
+  object-fit: cover;
+}
